# kids_coding_arcade

./: .replit  README.md  pyproject.toml
Beispiele/: 1_Smile.py  2_Turtle.py
Tag_1/: README.md
Tag_1/tag-1-1/: README.md  main.py
Tag_1/tag-1-2/: Aufgabe.draw  Spickzettel.md  main.py
Tag_1/tag-1-3/: main.py
Tag_2/: README.md
Tag_2/tag-2-1/: Spickzettel.md  main.py
Tag_2/tag-2-2/: README.md  Spickzettel.md  main.py
Tag_2/tag-2-3/: README.md  Spickzettel.md  main.py
Tag_3/: README.md
Tag_3/tag-3-1/: README.md  Spickzettel.md  main.py
Tag_3/tag-3-x-bubbles/: main.py
Vorlagen/Arcade Window Vorlage/: main.py
Vorlagen/Arcade Zeichnen Vorlage/: main.py
Vorlagen/Arcade Zeichnen Vorlage mit Events/: main.py
