[tool.poetry]
name = "repl_python3_kidscodingarcade"
version = "0.1.0"
description = ""
authors = ["eruvanos <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
arcade = "^2.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
